# evolution

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  individual.rs  lib.rs  selection.rs  statistics.rs
libs/genetic-algorithm/src/crossover/: uniform.rs
libs/genetic-algorithm/src/mutation/: gaussian.rs
libs/genetic-algorithm/src/selection/: rank.rs  tournament.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs  neuron.rs
libs/neural-network/src/geneticalgorithm/: crossover.rs  mod.rs  mutation.rs  selection.rs  statistics.rs
libs/neural-network/src/geneticalgorithm/crossover/: uniform.rs
libs/neural-network/src/geneticalgorithm/mutation/: gaussian.rs
libs/neural-network/src/geneticalgorithm/selection/: rank.rs  roulette.rs  tournament.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  food.rs  lib.rs  simulation.rs  world.rs
libs/simulation-wgpu/: Cargo.toml  build.rs
libs/simulation-wgpu/res/: pacman.mtl
libs/simulation-wgpu/src/: camera.rs  instance.rs  lib.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  config.rs  eye.rs  food.rs  lib.rs  world.rs
www/: bootstrap.js  index.css  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
