[package]
name = "lib-neural-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.2", features = ["rand"] }
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
approx = "0.5.1"
