[package]
name = "lib-neural-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.2", features = ["rand"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.163", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.25.2"

[dev-dependencies]
approx = "0.5.1"
