[package]
name = "lib-simulaton-wasm"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.83"
lib-simulation = { path = "../simulation" }
lib-neural-network= { path = "../neural-network" }
getrandom = { version = "0.2.8", features = ["js"] }
serde = { version = "1.0.156", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
console_error_panic_hook = "0.1.7"
strum = "0.25.0"