[package]
name = "lib-simulation-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lib-simulation = { path = "../simulation" }
anyhow = "1.0.70"
bytemuck = { version = "1.13.1", features = ["derive"] }
cfg-if = "1.0.0"
env_logger = "0.11.0"
image = { version = "0.25.0", features = ["png", "jpeg"] }
log = "0.4.17"
nalgebra = "0.32.2"
pollster = "0.3.0"
wgpu = "0.20.0"
winit = { version = "0.29.2", features = ["rwh_05"] }
rand = "0.8.5"
tobj = { version = "4.0.0", features = ["async"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["Document", "Window", "Element", "Location"] }
wgpu = { version = "0.19.1", features = ["webgl"] }
reqwest = "0.11.18"

[build-dependencies]
anyhow = "1.0.70"
fs_extra = "1.3.0"
glob = "0.3.1"